--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>developer-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+    <section>
+        <div class="baby">
+            <h1> <span class="lio"> Welcome To</span></h1>
+            <h1> <span class="hot"> The </span><span class="naughty">Anime</span> <span class="cold"> World!</span></h1>
+            <h3 class="nonstop">Here we will learn about anime</h3>
+            <p class="nice">Anime History is long,its was 1908 when Japan make there first animeted cartoon.Now a days
+                japanese
+                cartoon
+                called anime.There are many good anime you can find,my favourate anime name is Naruto.It was 720
+                episodes in
+                total.There are many anime that go long then 1000+ episode. </p>
+            <a class="link-button" target="-blank" href="https://animixplay.to/">animesite</a>
+        </div>
+        <div class="baby">
+            <img src="images/noelle.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
