added new paragraph

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 cartoon
                 called anime.There are many good anime you can find,my favourate anime name is Naruto.It was 720
                 episodes in
-                total.There are many anime that go long then 1000+ episode. </p>
+                total.There are many anime that go long then 1000+ episode.Here are some of my favourite anime name
+                Black Clover,One Punch Man,Demon Slayer,Seven Deadly Sins,Highschool DxD,Re:Zero,Mob Physco </p>
             <a class="link-button" target="-blank" href="https://animixplay.to/">animesite</a>
         </div>
         <div class="baby">
