top background added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="baby">
             <h1> <span class="lio"> Welcome To</span></h1>
             <h1> <span class="hot"> The </span><span class="naughty">Anime</span> <span class="cold"> World!</span></h1>
