background image added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="baby">
             <h1> <span class="lio"> Welcome To</span></h1>
             <h1> <span class="hot"> The </span><span class="naughty">Anime</span> <span class="cold"> World!</span></h1>
-            <h3 class="nonstop">Here we will learn about anime</h3>
+            <h3 class="nonstop">Here we will learn about anime History</h3>
             <p class="nice">Anime History is long,its was 1908 when Japan make there first animeted cartoon.Now a days
                 japanese
                 cartoon
@@ -30,6 +30,25 @@
         <div class="baby">
             <img src="images/noelle.png" alt="">
         </div>
+    </section>
+    <section class="body">
+        <div class="baby">
+            <img src="images/Naru.png" alt="">
+        </div>
+        <div class="baby">
+            <h1>Best anime in History</h1>
+            <h2>Some of my favourite anime</h2>
+            <p>
+            <ol>
+                <li>
+                    all the hell
+                </li>
+                <li>boss baby</li>
+            </ol>
+            </p>
+            <a class="link-button" target="-blank" href="https://animekisa.tv/">Another Animesite</a>
+        </div>
+
     </section>
 </body>
 
