--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="baby">
             <h1> <span class="lio"> Welcome To</span></h1>
             <h1> <span class="hot"> The </span><span class="naughty">Anime</span> <span class="cold"> World!</span></h1>
@@ -31,24 +31,86 @@
             <img src="images/noelle.png" alt="">
         </div>
     </section>
-    <section class="body">
+    <section class="body flexible-container">
         <div class="baby">
             <img src="images/Naru.png" alt="">
         </div>
         <div class="baby">
-            <h1>Best anime in History</h1>
-            <h2>Some of my favourite anime</h2>
+            <h1 class="lost">Best anime in History</h1>
+            <h2 class="nonstop"> <span class="long gone">Some</span> <span class="before">of</span> <span
+                    class="after">my</span> <span class="class">favourite </span><span class="how">anime</span></h2>
             <p>
+
+
+
+
+
+
+
             <ol>
                 <li>
-                    all the hell
+                    Re:Zero − Starting Life in Another World.
                 </li>
-                <li>boss baby</li>
+                <li>Naruto.</li>
+                <li>Ghost in the Shell.</li>
+                <li>Steins;Gate.</li>
+                <li> Fullmetal Alchemist.</li>
+                <li>Samurai Champloo.</li>
+                <li>Darker Than Black</li>
+                <li>Death Note</li>
+            </ol>
+            </p>
+            <h2>And here are some top anime right now in Japan</h2>
+            <p>
+            <ol>
+                <li>Dragon Quest: The Adventure of Dai.</li>
+                <li>The Slime Diaries.</li>
+                <li>To Your Eternity.</li>
+                <li>Tokyo Revengers 🔥</li>
+                <li>Kingdom (Season 3)</li>
+                <li>I've Been Killing Slimes for 300 Years and Maxed Out My Level.</li>
+                <li> Fruits Basket The Final Season</li>
+                <li>Hige wo Soru</li>
             </ol>
             </p>
             <a class="link-button" target="-blank" href="https://animekisa.tv/">Another Animesite</a>
         </div>
 
+    </section>
+    <section class="new text">
+        <h1>Life of an Otaku</h1>
+        <div class="flexible-container">
+            <div>
+                <h1>Black Clover</h1>
+                <h3>2019-2021 </h3>
+                <p>There are numerous animations produced and released all over the world every year. Here, anime, which
+                    is
+                    the Japanese term originating in Japan and especially means the animations made in Japan.It is said
+                    that
+                    the first Japanese animation was made and released in 1917. Speaking of the earliest famous anime in
+                    Japan, Astro Boy (a.k.a. Mighty Atom) was released in 1963 as the first anime series aired on TV.
+                    Around
+                    hundreds of new anime are aired on TV and distributed to the movie streaming platforms and come to
+                    the
+                    screens every year, and the number of must-watch anime is going on increasing year by year.</p>
+            </div>
+            <div>
+                <h1>Naruto Shipudin</h1>
+                <h3>2021-2022 </h3>
+                <p>The industry of anime has prospered substantially in Japan partly because the country has other
+                    Japanese
+                    pop cultures such as manga, video games and light novels. Some popular anime are adaptations of
+                    manga,
+                    video games, light novels and other media. And, anime has flourished worldwide so rapidly since
+                    anyone
+                    can access the Japanese animations with English dubs and subtitles.Here are 30 best anime series
+                    including both the classic anime franchises and the brand new series. This greatest anime list will
+                    help
+                    beginners to find which anime to start watching with in the world or anime fans to decide the next
+                    one
+                    to try. Otherwise, check the best anime by anime freak’s standards.</p>
+            </div>
+        </div>
     </section>
 </body>
 
