--- a/index.html
+++ b/index.html
@@ -40,13 +40,6 @@
             <h2 class="nonstop"> <span class="long gone">Some</span> <span class="before">of</span> <span
                     class="after">my</span> <span class="class">favourite </span><span class="how">anime</span></h2>
             <p>
-
-
-
-
-
-
-
             <ol>
                 <li>
                     Re:Zero − Starting Life in Another World.
@@ -75,40 +68,39 @@
             </p>
             <a class="link-button" target="-blank" href="https://animekisa.tv/">Another Animesite</a>
         </div>
-
     </section>
     <section class="new text">
         <h1>Life of an Otaku</h1>
         <div class="flexible-container">
-            <div>
-                <h1>Black Clover</h1>
-                <h3>2019-2021 </h3>
-                <p>There are numerous animations produced and released all over the world every year. Here, anime, which
-                    is
-                    the Japanese term originating in Japan and especially means the animations made in Japan.It is said
-                    that
-                    the first Japanese animation was made and released in 1917. Speaking of the earliest famous anime in
-                    Japan, Astro Boy (a.k.a. Mighty Atom) was released in 1963 as the first anime series aired on TV.
-                    Around
-                    hundreds of new anime are aired on TV and distributed to the movie streaming platforms and come to
-                    the
-                    screens every year, and the number of must-watch anime is going on increasing year by year.</p>
+            <div class="nothing">
+                <h2>Black Clover</h2>
+                <h3>2017-2021</h3>
+                <p>
+                    Asta and Yuno were abandoned at the same church on the same day. Raised together as children, they
+                    came to know of the "Wizard King"—a title given to the strongest mage in the kingdom—and promised
+                    that they would compete against each other for the position of the next Wizard King. However, as
+                    they grew up, the stark difference between them became evident. While Yuno is able to wield magic
+                    with amazing power and control, Asta cannot use magic at all and desperately tries to awaken his
+                    powers by training physically.When they reach the age of 15, Yuno is bestowed a spectacular Grimoire
+                    with a four-leaf clover, while Asta receives nothing. However, soon after, Yuno is attacked by a
+                    person named Lebuty, whose main purpose is to obtain Yuno's Grimoire. Asta tries to fight Lebuty,
+                    but he is outmatched. Though without hope and on the brink of defeat, he finds the strength to
+                    continue when he hears Yuno's voice. Unleashing his inner emotions in a rage, Asta receives a
+                    five-leaf clover Grimoire, a "Black Clover" giving him enough power to defeat Lebuty. A few days
+                    later, the two friends head out into the world, both seeking the same goal—to become the Wizard
+                    King!</p>
             </div>
-            <div>
-                <h1>Naruto Shipudin</h1>
-                <h3>2021-2022 </h3>
-                <p>The industry of anime has prospered substantially in Japan partly because the country has other
-                    Japanese
-                    pop cultures such as manga, video games and light novels. Some popular anime are adaptations of
-                    manga,
-                    video games, light novels and other media. And, anime has flourished worldwide so rapidly since
-                    anyone
-                    can access the Japanese animations with English dubs and subtitles.Here are 30 best anime series
-                    including both the classic anime franchises and the brand new series. This greatest anime list will
-                    help
-                    beginners to find which anime to start watching with in the world or anime fans to decide the next
-                    one
-                    to try. Otherwise, check the best anime by anime freak’s standards.</p>
+            <div class="nothing">
+                <h2>Naruto</h2>
+                <h3>2002-2007</h3>
+                <p>Moments prior to Naruto Uzumaki's birth, a huge demon known as the Kyuubi, the Nine-Tailed Fox,
+                    attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the
+                    Kyuubi's rampage, the leader of the village, the Fourth Hokage, sacrificed his life and sealed the
+                    monstrous beast inside the newborn Naruto.Now, Naruto is a hyperactive and knuckle-headed ninja
+                    still living in Konohagakure. Shunned because of the Kyuubi inside him, Naruto struggles to find his
+                    place in the village, while his burning desire to become the Hokage of Konohagakure leads him not
+                    only to some great new friends, but also some deadly foes.After that he goes on a journey with
+                    Jaraiya Sensei for training to beat Akatsuki. </p>
             </div>
         </div>
     </section>
